--- a/MOFAtools/vignettes/foo/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/foo/MOFA_example_scMT.Rmd
@@ -23,7 +23,7 @@ library(purrr)
 
 ## Load data as a MultiAssayExperiment
 ```{r}
-# sample_metadata <- read.table("/Users/ricard/data/scMT/sample_info.txt", header=T) %>% tibble::column_to_rownames("sample")
+sample_metadata <- read.table("/Users/ricard/data/scMT/sample_info.txt", header=T) %>% tibble::column_to_rownames("sample")
 mae <- readRDS("/Users/ricard/data/scMT/join/scMT_MultiAssayExperiment.rds")
 ```
 
@@ -39,7 +39,8 @@ model <- createMOFAobject(mae)
 ### Define I/O options
 ```{r}
 DirOptions <- list(
-  "tmpDir" = tempdir(),
+  # "tmpDir" = tempdir(),
+  "tmpDir" = "/tmp/test",
   "mofaDir" = "/Users/ricard/mofa/MOFA",
   "outFile" = "/Users/ricard/scMT/mofa/out/model.hdf5"
 )
@@ -48,7 +49,7 @@ DirOptions <- list(
 ### Define model options
 ```{r}
 ModelOptions <- getDefaultModelOpts(model)
-ModelOptions$initialK <- 10
+ModelOptions$initialK <- 30
 ModelOptions$learnMean <- F
 
 # Define covariates
@@ -61,10 +62,10 @@ ModelOptions$scale_covariates <- rep(1,ncol(ModelOptions$covariates))
 ### Define training options
 ```{r}
 TrainOptions <- getDefaultTrainOpts()
-TrainOptions$maxiter <- 1000
+TrainOptions$maxiter <- 2000
 TrainOptions$startSparsity <- 200
 TrainOptions$drop_by_norm <- 0.00
-TrainOptions$drop_by_r2 <- 0.00
+TrainOptions$drop_by_r2 <- 0.05
 ```
 
 ## Prepare MOFA
@@ -82,8 +83,14 @@ model <- prepareMOFA(model,
 ## Run MOFA
 This step can take some time and it decouples from the R package, it is recommended to run it from the Python-based module
 ```{r}
-model <- runMOFA(model, DirOptions)
-model <- loadModel("/Users/ricard/scMT/mofa/out/model.hdf5", sortFactors = F)
+
+# Training the model from R
+# model <- runMOFA(model, DirOptions)
+
+# Training the model from Python
+model <- loadModel("/Users/ricard/scMT/mofa/out/model_test.hdf5", sortFactors = F)
+model@InputData <- mae
+
 ```
 
 
@@ -109,7 +116,7 @@ e <- model@TrainData$expr
 m <- model@TrainData$met_prom_cgi
 
 # culture <- sample_metadata[sampleNames(model),]$culture
-scatterPairs(model, factors = c("2","4","5"), colour_by="culture")
+scatterPairs(model, factors = c("1","7"), color_by="mean_methylation", shape_by="culture", colorLegend=T, shapeLegend = T)
 
 clusters <- rep(NA,length(sampleNames(model))); names(clusters) <- sampleNames(model)
 clusters[names(which(Z[,"5"]<0.3 & Z[,"4"]>(-0.5)))] <- "1"
@@ -118,52 +125,69 @@ clusters[names(which(Z[,"4"]<(-0.5)))] <- "3"
 # clusters <- cut(Z[,"5"], breaks=c(-Inf,0,Inf), labels=c("1","2"))
 
 colData(model@InputData)$cluster <- clusters
-scatterPlot(model, factors=c("4","5"), colour_by="cluster", shape_by="culture")
+scatterPlot(model, factors=c("1","4"))
+# scatterPlot(model, factors=c("1","7"), colour_by="culture", shape_by="culture")
+
+histPlot(model, factor="6")
 ```
 
 ### Correlation of latent variables
 ```{r}
 FactorsCorPlot(model)
+
+r <- CorrplotLFvsPC(model, views = "all", noPCs = 3, method = "bpca")
 ```
+
+
 
 ## Characterisation of specific latent factors
 
 ### Correlation with covariates
 ```{r}
 # Mean methylation rate
+beeswarmPlot(model, factors="1", color_by = "mean_methylation", color_name="", colorLegend=T)
+
 # cor( colMeans(model@TrainData$met_genebody, na.rm=T), getExpectations(model,"Z","E"), use="complete.obs")
 ```
 
 ### Plot sparsity
 ```{r}
-# getExpectations(model,"Theta","E")
+
 ```
 
 ### Show weights and identify most relevant features
 ```{r}
-showWeightHeatmap(model, "Expression", factors = c("4","2","cell_dropout","5"), show_rownames=F)
-showWeights(model, view="Expression", factor="5", ntop=10, ntail=10)
 
-p1 <- showAllWeights(model, view="expr", factor="2", nfeatures=50, abs=FALSE, main="")
-print(p1)
-p2 <- showTopWeights(model, view="expr", factor="2", nfeatures=50,  manual_features=NULL)
-print(p2)
-```
+pluri <- fread("/Users/ricard/NMT-seq/genesets/pluripotency.tsv", header=F) %>% setnames(c("ens_id","gene")) %>% .[["gene"]]
+pluri <- pluri[pluri %in% featureNames(model)[["expr"]]]
+showWeightHeatmap(model, "expr", factors = c("4","2","7","5"), show_rownames=F)
+showAllWeights(model, view="expr", factor="10")
+<# showAllWeights(model, view="expr", factor="7", nfeatures=0, abs =FALSE, manual=list(pluri), main="")
+showAllWeights(model, view="expr", factor="4", nfeatures=10, abs=FALSE, main="")
+showTopWeights(model, view="expr", factor="2", nfeatures=10,  manual_features=NULL, sign="negative", abs=FALSE)
+showTopWeights(model, view="expr", factor="2", nfeatures=10,  manual_features=NULL, sign="positive", abs=FALSE)
+
 ```
 
 ### Show original data for the genes with top weights
-```{r, fig.height=7, fig.width=11}
+```{r, fig.height=4, fig.width=7}
 
 # Latent variable 4 (methylation factor)
-anno_df <- data.frame(
-  row.names=rownames(colData(model@InputData)),
-  culture=model@InputData$culture
-  # cluster=model@InputData$cluster
-)
-showDataHeatmap(model, view="met_super_enhancers", factor="4", nfeatures=100, show_colnames=F, show_rownames=T, annotation_row=anno_df, fontsize_row=8)
+# row_df <- data.frame(
+#   row.names=sampleNames(model),
+#   # culture=model@InputData$culture
+#   # culture=sample_metadata$culture
+#   # cluster=model@InputData$cluster
+# )
+# col_df <- data.frame(
+#   row.names=featureNames(model)[["expr"]],
+#   pluri=featureNames(model)[["expr"]]%in% pluri
+#   # cluster=model@InputData$cluster
+# )
+showDataHeatmap(model, view="met_genebody", factor="1", nfeatures=500, show_colnames=F, show_rownames=F, annotation_row=row_df)
 
-showDataHeatmap(model, view="met_prom_cgi", factor="10", nfeatures=100, show_colnames=F, show_rownames=T, fontsize_row=8)
-showDataHeatmap(model, view="Expression", factor="9", nfeatures=100, show_colnames=F, show_rownames=T, fontsize_row=8)
+showDataHeatmap(model, view="met_prom_cgi", factor="10", nfeatures=50, show_colnames=F, show_rownames=T, fontsize_row=8)
+showDataHeatmap(model, view="expr", factor="4", nfeatures=500, show_colnames=F, show_rownames=F, fontsize_row=8)
 
 # Latent variable 2 (shared expression and methylation factor)
 
@@ -194,7 +218,7 @@ feature.sets <- rbind(
 # Run Feature Set Enrichment Analysis
 fsea.out <- FeatureSetEnrichmentAnalysis(
   model,
-  view = "Expression", 
+  view = "expr", 
   factors = "all", 
   feature.sets = feature.sets,
   local.statistic = "loading",
@@ -218,10 +242,11 @@ rownames(pval) <- stringr::str_replace_all(rownames(pval), reactome_meta)
 ### Visualise the results
 ```{r}
 # all factors
-Heatmap_FeatureSetEnrichmentAnalysis(p.values_adj, threshold=0.05)
+Heatmap_FeatureSetEnrichmentAnalysis(pval, threshold=0.001, main="Overview of gene ontology enrichment analysis", 
+                                     cluster_rows = F, cluster_cols = F, show_rownames = F, show_colnames = T)
 
 # individual factors
-LinePlot_FeatureSetEnrichmentAnalysis(p.values_adj, view="expr", factor="2", threshold=0.1, max.pathways=25)
+LinePlot_FeatureSetEnrichmentAnalysis(pval, view="expr", factor="9", threshold=0.1, max.pathways=25)
 ```
 
 
@@ -233,6 +258,35 @@ LinePlot_FeatureSetEnrichmentAnalysis(p.values_adj, view="expr", factor="2", thr
 # Imputation
 ```{r}
 Ypred <- imputeMissing(model, viewnms = "Expression")@ImputedData$Expression
+```
+
+
+# Sharedness of methylation and expression
+```{r}
+
+# Get top featuresof super enhancers in latent variable 1 (mean methylation rate)
+foo <- names(tail(sort(getExpectations(model,"SW","E")[["met_super_enhancers"]][,"7"]),n=25))
+bar <- names(head(sort(getExpectations(model,"SW","E")[["met_super_enhancers"]][,"7"]),n=25))
+
+# Get top features of super enhancers in latent variable 7 (pluripotency)
+baz <- names(getExpectations(model,"SW","E")[["met_super_enhancers"]][,"1"])
+# baz <- baz[!baz %in% c(foo,bar)]
+
+
+# Load methylation data
+tmp <- data.table(sample=sampleNames(model), pluri=getExpectations(model,"Z","E")[,"7"])
+# met <- fread("zcat < /Users/ricard/data/scMT/met/parsed/all.tsv.gz") %>% .[anno %in% "super_enhancers"] %>% merge(tmp)
+met_foo <- met[id %in% foo] %>% .[,group:="1"]
+met_baz <- met[id %in% baz] %>% .[,group:="2"]
+met_bar <- met[id %in% bar] %>% .[,group:="3"]
+small_met <- rbind(met_bar,met_foo,met_baz)
+
+to.plot <- small_met[,.(r=cor(rate,pluri, method="spearman")), by=c("id","anno","group")]
+ggplot(to.plot, aes(x=group, y=r, fill=group)) +
+  geom_boxplot(outlier.shape = NA) +
+  scale_y_continuous(limits = c(0.5,0.9)) +
+  theme_bw()
+
 ```
 
 
