--- a/MOFAtools/vignettes/foo/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/foo/MOFA_example_CLL.Rmd
@@ -11,9 +11,10 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+This vignette show how to use MOFA including initialization, training and down-stream analysis.
+For illustration we use the CLL data which is used in the MOFA publication.
+
 ```{r}
-# devtools::load_all("/Users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFAtools/")
-devtools::load_all("/Users/ricard/mofa/MOFAtools")
 library(MultiAssayExperiment)
 library(MOFAtools)
 ```
@@ -21,92 +22,67 @@ library(MOFAtools)
 # Step 1: Initialize MOFA object
 
 ## Load data and create MOFA object
-There are two ways to load the data into MOFA: 
-(1) A MultiAssayExperiment object.
-(2) A list of matrices where features are rows and samples are columns: MutliAssayExperiment is constructed internally
-The input data is stored in the InputData slot of the MOFA object.
+Data is loaded into MOFA using the [MultiAssayExperiment](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) framework.
+
+Starting from a list of matrices where features are rows and samples are columns this can be easily constructed as follows:
 ```{r}
-data("CLL_views")
+# list containing matrices for the following views: mRNA, Methyaltion, Drug Response, Mutations
+# samples are columns, features are rows
+data("CLL_data")
+sapply(CLL_data, dim)
 
-# Remove patients from experiments in which they are completly unobserved
-CLL_omics <-  lapply( CLL_views[c("lincRNA","meth","miRNA","mRNA","mut","viab")], 
-                      function(mat) mat[,apply(mat,2, function(p) !all(is.na(p)))]) 
+# data frame containing covariates not included in the training: sex, diagnosis
+data("CLL_covariates")
+head(CLL_covariates)
 
-# Define pData
-covariates <- data.frame(
-  row.names = colnames(CLL_views[["covariates"]]),
-  sex = CLL_views[["covariates"]][1,], 
-  diagnosis = CLL_views[["covariates"]][2,],
-  IGHV = CLL_views[["mut"]]["IGHV",],
-  trisomy12 = CLL_views[["mut"]]["trisomy12",]
-)
-
-# Define sampleMap (in this case is just identity, we don't need to do this)
-# mRNAmap <- data.frame(primary=colnames(CLL_views[["mRNA"]]), assay=colnames(CLL_views[["mRNA"]]), stringsAsFactors = FALSE)
-# miRNAmap <- data.frame(primary=colnames(CLL_views[["miRNA"]]), assay=colnames(CLL_views[["miRNA"]]), stringsAsFactors = FALSE)
-# lincRNAmap <- data.frame(primary=colnames(CLL_views[["lincRNA"]]), assay=colnames(CLL_views[["lincRNA"]]), stringsAsFactors = FALSE)
-# methmap <- data.frame(primary=colnames(CLL_views[["meth"]]), assay=colnames(CLL_views[["meth"]]), stringsAsFactors = FALSE)
-# mutmap <- data.frame(primary=colnames(CLL_views[["mut"]]), assay=colnames(CLL_views[["mut"]]), stringsAsFactors = FALSE)
-# viabmap <- data.frame(primary=colnames(CLL_views[["viab"]]), assay=colnames(CLL_views[["viab"]]), stringsAsFactors = FALSE)
-# listmap <- list(mRNAmap, miRNAmap, lincRNAmap, methmap, mutmap, viabmap)
-# names(listmap) <- c("mRNA", "miRNA", "lincRNA", "Methylation","Mutations","Drugs")
-# dfmap <- listToMap(listmap)
-
-# Create MultiAssayExperiment object
-# mae_CLL <- MultiAssayExperiment(experiments = CLL_omics, pData = covariates)
-mae_CLL <- MultiAssayExperiment(experiments = CLL_omics, colData = covariates)
+# Create MultiAssayExperiment object 
+mae_CLL <- MultiAssayExperiment(experiments = CLL_data, colData = CLL_covariates)
 ```
 
-### Create MOFA object using MultiAssayExperiment
+## Create MOFA object using MultiAssayExperiment
+'createMOFAobject' initialized an untrained MOFA object.
 ```{r}
-object <- createMOFAobject(mae_CLL)
+MOFAobject <- createMOFAobject(mae_CLL)
+MOFAobject
 ```
 
-### Create MOFA object using list of matrices
-```{r}
-# object <- createMOFAobjectFromList(ExpList = CLL_omics, pData = covariates)
-```
 
 # Step 2: Fit the MOFA model
+Now we can run MOFA on the untrained MOFA object from the last step. 
+This step requires some time and is not evaluates in this vignette, users need to specify the location of their MOFA python installation and a directory used by MOFA for intermediate and final outputs.
 
 ## Define options
-
 ### Define I/O options
-Important:
+Important paths to specify:
 - mofaDir: directory of the MOFA package
 - outFile: Output file for the model
-```{r}
+```{r, eval=FALSE}
 DirOptions <- list(
-  "mofaDir" = "/Users/ricard/mofa/MOFA",
-  "outFile" = "/Users/ricard/test.hdf5"
+  "mofaDir" = "your_path_to_MOFA/MOFApackage/scGFA/MOFA",
+  "outFile" = "path_to_output_directory"
 )
-
-# DirOptions <- list(
-#   "mofaDir" = "/users/bvelten/Documents/MOFA/MOFApackage/scGFA/MOFA",
-#   "outFile" = "/users/bvelten/Documents/MOFA/CLL_MOFA_data/testPipeline/test.hdf5"
-# )
 ```
 
 ### Define model options
-The user can look in the documentation and the function getDefaultModelOpts for the different options, but the default ones work fine. The most important thing the user has to define is the initial number of latent variables and the likelihood type (if not provided, the model tries to guess it from the data) 
-```{r}
-ModelOptions <- getDefaultModelOpts(object)
-ModelOptions$initialK <- 10
+The user can look in the documentation and the function 'getDefaultModelOpts' for the different options, but the default ones usually work well The most important thing the user has to define is the initial number of latent variables and the likelihood type (if not provided, the model tries to guess it from the data) 
+```{r, eval=FALSE}
+# TO-DO: check consistency with final model parameters
+ModelOptions <- getDefaultModelOpts(MOFAobject)
+ModelOptions
 ```
 
 ### Define training options
-The user can look in the documentation and the function getDefaultTrainOpts for the different options, but the default ones work fine. The most important thing the user has to define is the maximum number of iterations and whether/how to drop inactive latent factors while training.
-```{r}
+The user can look in the documentation and the function 'getDefaultTrainOpts' for the different options, but the default ones work fine. The most important thing the user has to define is the maximum number of iterations and whether/how to drop inactive latent factors while training.
+```{r, eval=FALSE}
+# TO-DO: check consistency with final model parameters
 TrainOptions <- getDefaultTrainOpts()
-TrainOptions$maxiter <- 10
-TrainOptions$drop_by_norm <- 0.00
-TrainOptions$drop_by_r2 <- 0.00
+TrainOptions
 ```
 
 ## Prepare MOFA
 Internally, prepareMOFA performs a set of sanity checks, fills the TrainOpts and ModelOpts slots of the MOFAmodel object and it also creates a set of temporary files with the input matrices that will be loaded by the Python core implementation
-```{r}
-object <- prepareMOFA(object, 
+```{r, eval=FALSE}
+MOFAobject <- prepareMOFA(MOFAobject, 
                       DirOptions = DirOptions,
                       ModelOptions = ModelOptions,
                       TrainOptions = TrainOptions
@@ -114,142 +90,158 @@ object <- prepareMOFA(object,
 ```
 
 ## Run MOFA
-This step can take some time and it decouples from the R package, it is recommended to run it from the Python-based module
-```{r}
-object <- runMOFA(object, DirOptions)
-# object <- readRDS(DirOptions$outFile)
+This step can take some time and it decouples from the R package, it is recommended to run it from the Python-based module directly using the txt files as input generated by 'prepareMOFA' and then re-load the fitted model stored in the hdf5 object back into R.
+```{r, eval=FALSE}
+MOFAobject <- runMOFA(MOFAobject, DirOptions)
+```
 
-#for demonstration purposes use already fitted object
-# object <- loadModel("/Users/bvelten/Documents/MOFA/CLL_MOFA_data/out/test_final/common_small_noXY_alldrugs_mean2.hdf5")
-# object <- loadModel("/Users/ricard/data/CLL/out/test_final/common_small_noXY_alldrugs_mean2.hdf5")
-object <- loadModel("/Users/ricard/data/CLL/out/test_final/29Jun/test2.hdf5")
+For illustration, we load the model used in the paper from the hdf5 file produced by MOFA
+```{r}
+# TO-DO: sortFactor=T by default
+filepath <- system.file("extdata", "model15.hdf5", package = "MOFAtools")
+MOFAobject <- loadModel(filepath)
+MOFAobject
 ```
 
 # Step 3: Analyse a trained MOFA model
+After training, we can explore the results from MOFA. We recommend the following semi-automated pipeline to disentangel adn characterize the drivers of variation identified by MOFA:
 
-## Show the variance explained for each factor in each view
+For a first overview we recommend:
+  (1) Calculation of variance explained by each factor in each view
+
+Next, factor can be further characterized using:
+  (2) Inspection of top weighted features in the active views
+  (3) Feature set enrichemnt analysis in the active views (where set annotations are present, e.g. gene sets for mRNA views)
+  (4) Ordination of samples by factors to reveal clusters and graadients in the sample space
+  
+## (1) Calculation of variance explained by each factor in each view
+This is done by the 'calculateVarianceExplained' function. The resulting plot allows to get an overivew of wich factors are active in which view and see which factors are unique and which capture co-variation between several views. Factors are ordered by overall variance explained, i.e. the first factor explains most varaince across all views.
+
 ```{r}
-r2 <- calculateVarianceExplained(object)
-r2 <- calculateVarianceExplained(object, showtotalR2 = T, showVarComp = F)
+r2 <- calculateVarianceExplained(MOFAobject)
 ```
 
-## Inspect latent facotrs
-Scatterplots of pairs of latent variables and beeswarm/histogram fo single LFs
+## (2) Inspection of top weighted features in the active views
+To see top features for a given view and factor we can use the 'showTopWeights' function, e.g. for the first two factors on the mutation or mRNA view:
+
 ```{r}
-ighv <- as.factor(TrainData(object)[["mut"]]["IGHV",])
-scatterPairs(object, factors = c("4","8"), showMissing = F, colour_by = ighv, colour_name = "IGHV")
-beeswarmPlot(object, factor="4", color = ighv, color_name = "IGHV")
-# histPlot(object, "4", groups = as.factor(data$mut["IGHV",]), name_colour ="IGHV" )
+showTopWeights(MOFAobject, "Mutations", "1")
+showTopWeights(MOFAobject, "Mutations", "2")
 ```
 
-## Characterisation of specific latent factors by inspection of the weights
-
-
-### Show weights and identify most relevant features
-There are two main functions to display the weights, a heatmap and a line plot
+All weights on a factors in a view can be looked at using the 'showAllWeights' function
 ```{r}
-showWeightHeatmap(object, view="mRNA", features="all", factors="all", show_rownames=F, cluster_cols=F)
-
-top <- names(tail(sort(abs(getExpectations(object,"SW","E")[["mRNA"]][,2])), n=10))
-showWeightHeatmap(object, view="mRNA", features=top, factors=c("2","3"), 
-                  main="Weight matrix for a subset of features and factors", 
-                  show_rownames=T, cluster_cols=F, cluster_rows=F)
-```
-
-THIS PLOT IS A BIT UGGLY, WE NEED SOME MODIFICATION...
-```{r}
-showWeights(object, "mut", 4)
+showAllWeights(MOFAobject, view = "Mutations", factor = "1", nfeatures = 4)
 ```
 
 
-### Show original data for the genes with top weights
-There is a function to inspect the original data focusing on the features with top weights in a particular factor
+To get an overview across all factors in a given view we can use the 'showWeightHeatmap' function.
 ```{r}
-showDataHeatmap(object, view="mRNA", factor="2", nfeatures=50)
-# showDataScatter(object, "mRNA", 4)
-# The X axis is the latent variable and the Y axis is the observed value of the feature
-# showDataScatter(object, view, factor, nfeatures=50, colour_by=NULL, shape_by=NULL)
+#TO-DO: white for zeros and transpose
+showWeightHeatmap(MOFAobject, "Mutations")
 ```
 
+To see the original data for the genes with top weights on a factor use 'showDataHeatmap'.
+```{r}
+showDataHeatmap(MOFAobject, view="mRNA", factor="1", nfeatures=30)
+```
 
-### Feature set enrichment analysis
+## (3) Feature set enrichemnt analysis in the active views
 The characterisation of factors usually requires the inspection of the corresponding weights. However, looking at the loadings of single features can be challenging, and often the combination of signal from functionally related sets of features (i.e. gene ontologies) is required.
-Here we implemented a feature set enrichment analysis method (FeatureSetEnrichmentAnalysis) derived from the PCGSE package (REF).
-The input of these function is a MOFA trained model (MOFAmodel), the factors for which to perform feature set enrichment (a character vector), the feature sets (a binary matrix) and a set of options regarding how the analysis should be performed. For more information see ...
 
-Here we are going to perform feature set enrichment analysis on the mRNA view with the following options: absolute value of the weight (or loading) as feature statistic, the mean difference between the features in the gene set and the features outside the gene set as a feature set statistic and the correlation-adjusted parametric statistical test.
+Here we implemented a function for feature set enrichment analysis method (FeatureSetEnrichmentAnalysis) derived from the [PCGSE package](https://cran.r-project.org/web/packages/PCGSE/index.html).
+
+The input of this function is a MOFA trained model (MOFAmodel), the factors for which to perform feature set enrichment (a character vector), the feature sets (a binary matrix) and a set of options regarding how the analysis should be performed, see also documentation of 'FeatureSetEnrichmentAnalysis'
+
+We illustrate the use of this function using the [reactome](http://reactome.org) annotations.
 ```{r}
-# The input format for feature sets has to be a binary matrix where the rows represent feature sets and the columns are features where a value of 1 indicates that the feature belongs to the corresponding feature set.
+# TO-DO make min.size 15 default
 
-# Load reactome annotations
-reactome <- readRDS("/Users/ricard/data/reactome/v59/homo_sapiens/out/human_reactome.rds")
+# Load reactome annotations, binary matrix with feature sets in rows and feautres in columns
+data("reactomeGS")
+fsea.out <- FeatureSetEnrichmentAnalysis(MOFAobject, "mRNA", reactomceGS,
+                                         statistical.test = "parametric", alpha = 0.01,
+                                         min.size = 15)
 
-# Rename pathways
-tmp <- read.table("/Users/ricard/data/reactome/v59/homo_sapiens/AllPathways.txt", header=F, quote="", sep="\t", stringsAsFactors=F)[,c(1,2)]
-reactome_meta <- tmp[,2]; names(reactome_meta) <- tmp[,1]
-rownames(reactome) <- stringr::str_replace_all(rownames(reactome), reactome_meta)
-
-# Load reactome annotations + information on pathways
-# reactome<-readRDS("~/Documents/MOFA/CLL_MOFA_data/GO/reactome/human_reactome_binary_matrix.rds")
-# ReactomePathwayInfo<-readLines("~/Documents/MOFA/CLL_MOFA_data/GO/reactome/ReactomePathwaysMeta.txt")
-# ReactomePathwayInfo<-do.call(rbind,strsplit(ReactomePathwayInfo, "\t"))
-# colnames(ReactomePathwayInfo)<-c("id", "description", "species")
-# ReactomePathwayInfo<-as.data.frame(ReactomePathwayInfo)
-# ReactomePathwayInfo<-ReactomePathwayInfo[ReactomePathwayInfo$species=="Homo sapiens",]
-# rownames(reactome) <- ReactomePathwayInfo$description[match(rownames(reactome), ReactomePathwayInfo$id)]
-
-# Run Feature Set Enrichment Analysis (basic with default options)
-# FSE.out <- FeatureSetEnrichmentAnalysis(object, view = "mRNA", feature.sets = reactome)
-
-# Run Feature Set Enrichment Analysis (advanced)
-FSE.out <- FeatureSetEnrichmentAnalysis(
-  object,
-  view = "mRNA",
-  factors = "all",
-  feature.sets = reactome,
-  local.statistic = "loading",
-  transformation = "abs.value",
-  global.statistic = "mean.diff",
-  # statistical.test = "permutation",
-  statistical.test = "cor.adj.parametric",
-  nperm=1000,
-  min.size=10,
-  cores=2, 
-  alpha=0.05
-)
-
-# Extract p values
-pval <- FSE.out$pval.adj
-
+# get (mutliple-testing adjusted) p-values
+pval <- fsea.out$pval.adj
 ```
 
 The next step is to visualise the results of the Gene Set Enrichment Analysis. There are two default plots:
-(1) General Overview: Heatmap with the p.values, rows being pathways and columns being factors. 
+(a) General Overview: Heatmap with the p.values, rows being pathways and columns being factors. 
 ```{r}
-Heatmap_FeatureSetEnrichmentAnalysis(pval, threshold=0.10, log=T)
+Heatmap_FeatureSetEnrichmentAnalysis(pval, threshold=0.01, log=T)
 ```
 
-(2) Factor-specific:
+(b) Factor-specific:
 ```{r}
-interestingFactors <- c("2")
+interestingFactors <- c("4","5")
 for (factor in interestingFactors) {
-  LinePlot_FeatureSetEnrichmentAnalysis(pval, factor, threshold=0.05, max.pathways=25)
+  lineplot <- LinePlot_FeatureSetEnrichmentAnalysis(pval, factor, threshold=0.01, max.pathways=10)
+  print(lineplot)
 }
 ```
 
-## Imputation of missing observations
+
+## (4) Ordination of samples by factors to reveal clusters and graadients in the sample space
+
+Samples can be visualized along factors of interest using the 'scatterPlot' function.
 ```{r}
-object<-imputeMissing(object)
+# TO-DO covariates
+scatterPlot(MOFAobject, factors = c("1", "2"), color_by = "IGHV", shape_by = "trisomy12")
+```
+
+An overview of pair-wise sctterplots for all or a subset of factors is produced by the 'scatterPairs' function
+```{r}
+scatterPairs(MOFAobject, factors = c("1", "2", "3", "4"))
+```
+
+A single factor can be visualised using the 'beeswarmPlot' function
+```{r}
+beeswarmPlot(MOFAobject, factors = "1")
+```
+
+## Customized analysis
+For customized exploration of weights and factors, you can directly obtain the weights, factors or training data in matrix or data.frame format using the 'getWeights', 'getFactors' and 'getTrainData'. You can specify a subset of views or factors, you are interested in; by default, all views and factors are reported.
+```{r}
+MOFAweights <- getWeights(MOFAobject, as.data.frame = T)
+head(MOFAweights)
+```
+
+```{r}
+#TO-DO add a factors option
+MOFAfactors <- getFactors(MOFAobject, as.data.frame = T)
+head(MOFAfactors)
+```
+
+```{r}
+MOFAdata <- getTrainData(MOFAobject, as.data.frame = T, views = "Mutations")
+head(MOFAdata)
+```
+
+
+# Further functionalities
+
+## Imputation of missing observations
+With the 'imputeMissing' function all missing values are imputed based on the MOFA model. The imputed data is then stored in the MOFAobject and can be accessed via 'getImputedData'.
+```{r}
+# TO-DO get function
+MOFAobject <- imputeMissing(MOFAobject)
+imputedDrugs <- getImputedData(MOFAobject, view="Drugs")
+```
+
+## Prediction of views
+With the 'predict' function, full views can be predicted based on the MOFA model with all or a subset of factors
+```{r}
+# TO-DO predict
+predict(MOFAobject, view="Drugs", factors=c("1","2"))
 ```
 
 
 ## Clustering of samples based on latent factors
+Samples can be clustered according to their values on some or all latent factors using the 'clusterSamples' function.
 ```{r}
-
-# Using all latent factors
-h <- clusterSamples(object, "all", anno_df=NULL)
-
-# Using only a subset of latent factors and include annotation data frame
-# clusterSamples(object, "4", anno_df = data.frame(data$mut["IGHV",]))
-h <- clusterSamples(object, factors=c("2","4"), anno_df = covariates[sampleNames(object),])
+# TO-DO: k-means
+h <- clusterSamples(MOFAobject, "all")
+h <- clusterSamples(MOFAobject, "1")
 ```
