--- a/MOFAtools/vignettes/foo/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/foo/MOFA_example_CLL.Rmd
@@ -159,22 +159,19 @@ data("reactomeGS")
 
 # perfrom enrichment analysis
 fsea.out <- FeatureSetEnrichmentAnalysis(MOFAobject, "mRNA", reactomeGS, alpha = 0.01)
-
-# get (mutliple-testing adjusted) p-values
-pval <- fsea.out$pval.adj
 ```
 
 The next step is to visualise the results of the Gene Set Enrichment Analysis. There are two default plots:
-(a) General Overview: Heatmap with the p.values, rows being pathways and columns being factors. 
+(a) General Overview: Barplot with number of enriched gene sets per view
 ```{r}
-Heatmap_FeatureSetEnrichmentAnalysis(pval, threshold=0.01, log=T)
+Barplot_FeatureSetEnrichmentAnalysis(fsea.out, alpha=0.01)
 ```
 
 (b) Factor-specific:
 ```{r}
 interestingFactors <- c("4","5")
 for (factor in interestingFactors) {
-  lineplot <- LinePlot_FeatureSetEnrichmentAnalysis(pval, factor, threshold=0.01, max.pathways=10)
+  lineplot <- LinePlot_FeatureSetEnrichmentAnalysis(fsea.out, factor, threshold=0.01, max.pathways=10)
   print(lineplot)
 }
 ```
